@@ -442,3 +442,8 @@
 
         * Add Ecore_Wayland (backend to support Wayland).
         * Add Shm and Egl engines for ecore_evas to draw in Wayland.
+
+2011-12-27 Carsten Haitzler (The Rasterman)
+
+        * Fix mouse down grab counts going bad by missing events.
+
